--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -87,3 +87,7 @@ h2{
         color: #333;
     }
 }
+
+.name-line{
+    display: block-letters;
+}
